<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include
        layout="@layout/uesr_toplayout"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dip"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/bankinfo"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:textColor="@color/gray7"
                android:textSize="15sp"
                android:id="@+id/bank"
                android:text="@string/withdraw_bank"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:background="@color/line"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:textColor="@color/gray7"
                android:textSize="15sp"
                android:id="@+id/bankname"
                android:text="@string/bankname"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:background="@color/line"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:textColor="@color/gray7"
                android:id="@+id/banknumber"
                android:textSize="15sp"
                android:text="@string/bank_account"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:background="@color/line"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:textColor="@color/gray7"
                android:textSize="15sp"
                android:id="@+id/bankaddress"
                android:text="@string/bank_address"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:background="@color/line"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="10dip"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_green"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray8"
                    android:padding="5dip"
                    android:textSize="13sp"
                    android:text="@string/withdraw_money"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:background="@null"
                    android:inputType="number"
                    android:text=""
                    android:id="@+id/jine"
                    android:textSize="14sp"
                    android:padding="5dip"
                    />
            </LinearLayout>
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:background="@color/line"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="10dip"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_green"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray8"
                    android:padding="5dip"
                    android:textSize="13sp"
                    android:text="@string/withdraw_password"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:background="@null"
                    android:inputType="numberPassword"
                    android:maxLength="4"
                    android:singleLine="true"
                    android:padding="5dip"
                    android:textSize="14sp"
                    android:id="@+id/mima"
                    />
            </LinearLayout>
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:background="@color/line"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/warn"
                    />

            <TextView
                android:id="@+id/notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:layout_gravity="center"
                android:layout_marginLeft="5dip"
                android:drawablePadding="5dip"
                android:textColor="@color/gray8"
                android:gravity="left"
                android:textSize="13sp"
                android:text="提款金额5W之内3分钟内火速到账"
                />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginBottom="50dip"
            android:padding="10dip"
            android:gravity="center"
            android:id="@+id/comit"
            android:textColor="@color/white"
            android:text="@string/confirmwithdraw"
            android:layout_alignParentBottom="true"
            android:background="@drawable/radiu_blue_rangle"
            />

    </RelativeLayout>
</LinearLayout>
