<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray1"
    android:orientation="vertical"
    >

    <include
        layout="@layout/app_toplayout_lottery"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="fill_parent"
            android:layout_above="@+id/radiogroup"
            android:layout_marginBottom="1dp"
            android:layout_height="match_parent"
            android:clickable="true" >
        </FrameLayout>


    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/radioButton1"
            android:button="@null"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="3dip"
            android:drawableTop="@drawable/lotterytab_radiobtn"
            android:drawablePadding="3dip"
            android:checked="true"
            android:layout_weight="1"
            android:text="@string/lotteryroom"
            android:textSize="13sp"
            android:textColor="@drawable/lottery_text_colors"
            />
        <RadioButton
            android:id="@+id/radioButton2"
            android:button="@null"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="3dip"
            android:drawableTop="@drawable/lotterytab_radiobtn2"
            android:drawablePadding="3dip"
            android:layout_weight="1"
            android:text="@string/lotterycentre"
            android:textSize="13sp"
            android:textColor="@drawable/lottery_text_colors"
            />
        <RadioButton
            android:id="@+id/radioButton3"
            android:button="@null"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="3dip"
            android:drawableTop="@drawable/lotterytab_radiobtn3"
            android:drawablePadding="3dip"
            android:layout_weight="1"
            android:text="@string/orderlist2"
            android:textSize="13sp"
            android:textColor="@drawable/lottery_text_colors"
            />

    </RadioGroup>
    </RelativeLayout>

</LinearLayout>
